--- a/index.html
+++ b/index.html
@@ -11,42 +11,199 @@
 </head>
 
 <body>
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="" class="header__logo">
+                    <img src="./img/logo.svg" alt="">
+                </a>
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li>
+                            <a href="">О нас
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">Услуги
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">Публикации</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__contact-wrap">
+                    <a class="header__contact-item" href="tel: +74951281324">
+                        <img src="./img/tel-icon.svg" alt="">
+                        <span>+7 (495) 128-13-24</span>
+                    </a>
+                    <a class="header__contact-item" href="mailto:info@manao-team.com">
+                        <img src="./img/mil-icon.svg" alt="">
+                        <span>info@manao-team.com</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="banner">
+        <img src="./img/banner.png" alt="">
+        <div class="container">
+            <div class="banner__inner">
+                <div class="banner__text-block">
+                    <h3 class="banner__description">Верстка. Программирование. Дизайн.</h3>
+                    <h1 class="banner__title">Техническая поддержка сайтов и корпоративных порталов</h1>
+                    <a href="" class="banner__btn">Отправить сайт на оценку</a>
+                </div>
+                <div class="banner__info">
+                    <div class="banner__info-key">Партнеры:</div>
+                    <img src="./img/logo-part.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
   
     <main>
+        <section class="about">
+            <div class="container">
+                <div class="about__inner">
+                    <div class="about__text-block">
+                        <h2 class="about__title">О нас</h2>
+                        <h3 class="about__subtitle">Техподдержка от бесперебойного аутсорс-продакшна</h3>
+                        <p class="about__text">
+                            Являясь партнером более 30 агентств, 
+                            которые доверили нам 100+ проектов и могут 
+                            подтвердить качество работы, мы сформировали новую 
+                            услугу, использовав весь опыт, накопленный в первом юните.
+                        </p>
+                        <p class="about__text">
+                            Manao.Support — это концентрация системной работы, 
+                            четких процессов и регламентов, позволяющих 
+                            минимизировать ситуации, когда исполнители о 
+                            чем-то забыли, не завершили часть задачи или 
+                            просто некорректно ее поняли.
+                        </p>
+                        <div class="about__photo-mini">
+                            <img src="./img/about1.png" alt="">
+                            <img src="./img/about2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="about__photo-block">
+                        <img src="./img/about3.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="services">
+            <div class="container">
+                <div class="services__inner">
+                    <h2 class="services__title">Услуги</h2>
+                    <h3 class="services__subtitle">Возьмем на себя комплексную поддержку сайта/портала</h3>
+                    <div class="services__content">
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser1.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Оптимизировать верстку</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser2.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Создать страницы</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser3.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Адаптировать 
+                                содержание</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser4.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Настроить 
+                                интеграцию</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser5.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Модернизировать сайт</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser6.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Оптимизировать верстку</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser7.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Разработать функционал</h4>
+                        </div>
+                        <div class="services__item">
+                            <div class="services__item-img">
+                                <img src="./img/ser8.svg" alt="">
+                            </div>
+                            <h4 class="services__item-title">Обновить систему</h4>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="feedback">
+            <img src="./img/background-footer.svg" alt="">
             <div class="container">
                 <div class="feedback__inner">
-                    <div class="feedback__left"></div>
-                    <div class="feedback__form">
+                    <div class="feedback__left">
+                        <div class="feedback__title">Отправить сайт на оценку</div>
+                    </div>
+                    <div class="feedback__form form">
                         <form action="#" class="form__body" id="form">
-                            <label for="">
-
-                                <input type="text" placeholder="Ваше имя">
+                            <label class="form__label">
+                                <input class="_req" type="text" placeholder="Ваше имя" name="name">
+                                <div class="out"></div>
                             </label>
-                            <label for="">
-                                Адрес сайта
-                                <input type="text" placeholder="Адрес сайта">
+                            <label class="form__label">
+                                <div class="form__label-title">Адрес сайта</div> 
+                                <input class="_req email" type="email" placeholder="Адрес сайта" name="email">
+                                <div class="out-email"></div>
                             </label>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Описание задач"></textarea>
-                            <label for="">
-                                <input type="checkbox" name="info">
+                            <textarea class="form__textarea" name="description" id="" cols="30" rows="10" placeholder="Описание задач"></textarea>
+                            <label class="form__label-checkbox">
+                                <input class="checkbox" type="checkbox" name="info" value="консультация">
                                 Мне нужна консультация
                             </label>
-                            <label for="">
-                                <input type="checkbox" name="info">
+                            <label class="form__label-checkbox">
+                                <input class="checkbox" type="checkbox" name="info" value="хотим тариф">
                                 Подберите для нас тариф
                             </label>
-                            <label for="">
-                                <input type="checkbox" name="info">
+                            <label class="form__label-checkbox">
+                                <input class="checkbox" type="checkbox" name="info" value="оценка">
                                 Готовы предоставить доступ для более детальной оценки
                             </label>
 
-                            <button>отправить заявку</button>
+                            <button type="submit">отправить заявку</button>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
+
+        <div class="popup">
+            <div class="popup__body">
+                <div class="popup__content">
+                    ЭТО ПОПАП
+                </div>
+            </div>
+        </div>
         
      
     </main>
