--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>MANAO Ella P. test</title>
 </head>
 
-<body class="body">
+<body>
 
     <header class="header">
         <div class="container">
