--- a/index.html
+++ b/index.html
@@ -289,11 +289,13 @@
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__left">
-                        <h2 class="footer__title">Отправить сайт на оценку</h2>
-                        <h3 class="footer__subtitle">Рассчитать смету?
-                            Проконсультировать по проекту?
-                            Подписать NDA?
-                            Легко!</h3>
+                        <div class="footer__title-wrap desctop">
+                            <h2 class="footer__title">Отправить сайт на оценку</h2>
+                            <h3 class="footer__subtitle">Рассчитать смету?
+                                Проконсультировать по проекту?
+                                Подписать NDA?
+                                Легко!</h3>
+                        </div>
                         <div class="footer__contact-block">
                             <div class="footer__social">
                                 <a class="footer__social-item" href="">Facebook</a>
@@ -325,6 +327,13 @@
                         </div>
                     </div>
                     <div class="footer__form form">
+                        <div class="footer__title-wrap mobile">
+                            <h2 class="footer__title">Отправить сайт на оценку</h2>
+                            <h3 class="footer__subtitle">Рассчитать смету?
+                                Проконсультировать по проекту?
+                                Подписать NDA?
+                                Легко!</h3>
+                        </div>
                         <form action="#" class="form__body" id="form">
                             <label class="form__label">
                                 <input class="_req" type="text" placeholder="Ваше имя" name="name">
